@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Mon Jan 30 2017 Sjoerd Mullender <sjoerd@acm.org>
+- Removed function BATprintf.  Use BATprint or BATprintcolumns instead.
 - Removed BATsave from the list of exported functions.
 
 * Tue Jan  3 2017 Sjoerd Mullender <sjoerd@acm.org>
